[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/makingWord2.gd" type="Script" id=1]
[ext_resource path="res://Asset/Quicksand/MoreSugar-Thin.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/S.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/Home/Latar Game Basic.png" type="Texture" id=4]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/A.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/G.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/V.tscn" type="PackedScene" id=7]
[ext_resource path="res://Asset/BoysGirls/makingWord/Submit Button.png" type="Texture" id=8]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/P.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/N.tscn" type="PackedScene" id=10]
[ext_resource path="res://Asset/BoysGirls/makingWord/Blank Button.png" type="Texture" id=11]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/E.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scene/GAme/BoysGirls/MakingWord/word/I.tscn" type="PackedScene" id=13]
[ext_resource path="res://Asset/Body Puzzle/girls/Perempuan TK.png" type="Texture" id=14]
[ext_resource path="res://Asset/Ulangi Button.png" type="Texture" id=15]
[ext_resource path="res://Scene/GAme/BoysGirls/BoysGirls.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scene/Main/GUI.tscn" type="PackedScene" id=17]
[ext_resource path="res://Asset/goodTouch/audio/Maaf_2C_20Coba_20Lagi_20Ya.mp3" type="AudioStream" id=18]
[ext_resource path="res://Asset/BoysGirls/makingWord/audio/Lengkapilah_20Kotak-kotak_20yang_20Kosong_20Menjadi_20Kata_20yang_20Benar.mp3" type="AudioStream" id=19]
[ext_resource path="res://Asset/Body Puzzle/audio/Benar.mp3" type="AudioStream" id=20]

[sub_resource type="DynamicFont" id=1]
size = 35
outline_color = Color( 1, 1, 1, 0.184314 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.79688, 14.75 )

[node name="makingWord2" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Control"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -411.0
margin_top = -344.0
margin_right = 552.0
margin_bottom = -251.0
custom_fonts/font = SubResource( 1 )
text = "Lengkapilah kotak-kotak yang kosong hingga menjadi kata yang 
benar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
mouse_filter = 2
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = 184.0
margin_right = 300.0
margin_bottom = 284.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
mouse_filter = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot1" type="TextureRect" parent="Control/Panel/GridContainer"]
margin_right = 97.0
margin_bottom = 95.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 7

[node name="slot2" type="TextureRect" parent="Control/Panel/GridContainer"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 95.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true

[node name="slot3" type="TextureRect" parent="Control/Panel/GridContainer"]
margin_left = 202.0
margin_right = 299.0
margin_bottom = 95.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true

[node name="slot4" type="TextureRect" parent="Control/Panel/GridContainer"]
margin_left = 303.0
margin_right = 400.0
margin_bottom = 95.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true

[node name="slot5" type="TextureRect" parent="Control/Panel/GridContainer"]
margin_left = 404.0
margin_right = 500.0
margin_bottom = 95.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true

[node name="slot6" type="TextureRect" parent="Control/Panel/GridContainer"]
margin_left = 504.0
margin_right = 600.0
margin_bottom = 95.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true

[node name="Submit" type="TextureButton" parent="Control"]
margin_left = 1020.0
margin_top = 538.0
margin_right = 1184.0
margin_bottom = 658.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset" type="TextureButton" parent="Control"]
margin_left = 202.0
margin_top = 534.0
margin_right = 302.0
margin_bottom = 634.0
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="position" type="Node2D" parent="."]

[node name="pos1" type="Position2D" parent="position"]
position = Vector2( 389, 592 )
__meta__ = {
"_edit_group_": true
}

[node name="slot1" type="Area2D" parent="position/pos1"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="position/pos1/slot1"]
position = Vector2( -1.79688, 3.25 )
shape = SubResource( 3 )

[node name="pos2" type="Position2D" parent="position"]
position = Vector2( 486, 592 )
__meta__ = {
"_edit_group_": true
}

[node name="slot2" type="Area2D" parent="position/pos2"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="position/pos2/slot2"]
position = Vector2( 3, -2 )
shape = SubResource( 3 )

[node name="pos3" type="Position2D" parent="position"]
position = Vector2( 586, 592 )
__meta__ = {
"_edit_group_": true
}

[node name="slot3" type="Area2D" parent="position/pos3"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="position/pos3/slot3"]
position = Vector2( 3, -2 )
shape = SubResource( 3 )

[node name="pos4" type="Position2D" parent="position"]
position = Vector2( 689, 592 )
__meta__ = {
"_edit_group_": true
}

[node name="slot4" type="Area2D" parent="position/pos4"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="position/pos4/slot4"]
position = Vector2( 3, -2 )
shape = SubResource( 3 )

[node name="pos5" type="Position2D" parent="position"]
position = Vector2( 787, 590 )
__meta__ = {
"_edit_group_": true
}

[node name="slot5" type="Area2D" parent="position/pos5"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="position/pos5/slot5"]
position = Vector2( 3, -2 )
shape = SubResource( 3 )

[node name="pos6" type="Position2D" parent="position"]
position = Vector2( 888, 590 )
__meta__ = {
"_edit_group_": true
}

[node name="slot6" type="Area2D" parent="position/pos6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="position/pos6/slot6"]
position = Vector2( 3, -2 )
shape = SubResource( 3 )

[node name="wordPos" type="Node2D" parent="."]

[node name="word" type="Node2D" parent="."]

[node name="E" parent="word" instance=ExtResource( 12 )]
position = Vector2( 235, 261 )

[node name="P" parent="word" instance=ExtResource( 9 )]
position = Vector2( 413, 415 )

[node name="S" parent="word" instance=ExtResource( 3 )]
position = Vector2( 952, 293 )

[node name="A2" parent="word" instance=ExtResource( 5 )]
position = Vector2( 1091, 430 )

[node name="I" parent="word" instance=ExtResource( 13 )]
position = Vector2( 801, 195 )

[node name="A" parent="word" instance=ExtResource( 5 )]
position = Vector2( 370, 271 )

[node name="V" parent="word" instance=ExtResource( 7 )]
position = Vector2( 198, 426 )

[node name="N" parent="word" instance=ExtResource( 10 )]
position = Vector2( 826, 452 )

[node name="G" parent="word" instance=ExtResource( 6 )]
position = Vector2( 1078, 217 )
z_as_relative = false

[node name="Tween" type="Tween" parent="."]

[node name="startWord" type="Node2D" parent="."]

[node name="Position2D2" type="Position2D" parent="startWord"]
position = Vector2( 202, 429 )

[node name="Position2D" type="Position2D" parent="startWord"]
position = Vector2( 190, 255 )

[node name="Position2D3" type="Position2D" parent="startWord"]
position = Vector2( 369, 270 )

[node name="Position2D4" type="Position2D" parent="startWord"]
position = Vector2( 409, 408 )

[node name="Position2D5" type="Position2D" parent="startWord"]
position = Vector2( 802, 194 )

[node name="Position2D6" type="Position2D" parent="startWord"]
position = Vector2( 823, 455 )

[node name="Position2D7" type="Position2D" parent="startWord"]
position = Vector2( 946, 295 )

[node name="Position2D8" type="Position2D" parent="startWord"]
position = Vector2( 1076, 216 )

[node name="Position2D9" type="Position2D" parent="startWord"]
position = Vector2( 1091, 426 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 17 )]
backScene = ExtResource( 16 )

[node name="narasi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
autoplay = true

[node name="cobaLagi" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="benar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[connection signal="pressed" from="Control/Submit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="Control/reset" to="." method="_on_reset_pressed"]
[connection signal="body_entered" from="position/pos1/slot1" to="." method="_on_slot1_body_entered"]
[connection signal="body_exited" from="position/pos1/slot1" to="." method="_on_slot1_body_exited"]
[connection signal="body_entered" from="position/pos2/slot2" to="." method="_on_slot2_body_entered"]
[connection signal="body_exited" from="position/pos2/slot2" to="." method="_on_slot2_body_exited"]
[connection signal="body_entered" from="position/pos3/slot3" to="." method="_on_slot3_body_entered"]
[connection signal="body_exited" from="position/pos3/slot3" to="." method="_on_slot3_body_exited"]
[connection signal="body_entered" from="position/pos4/slot4" to="." method="_on_slot4_body_entered"]
[connection signal="body_exited" from="position/pos4/slot4" to="." method="_on_slot4_body_exited"]
[connection signal="body_entered" from="position/pos5/slot5" to="." method="_on_slot5_body_entered"]
[connection signal="body_exited" from="position/pos5/slot5" to="." method="_on_slot5_body_exited"]
[connection signal="body_entered" from="position/pos6/slot6" to="." method="_on_slot6_body_entered"]
[connection signal="body_exited" from="position/pos6/slot6" to="." method="_on_slot6_body_exited"]
[connection signal="lepas" from="word/E" to="." method="_on_E_lepas"]
[connection signal="lepas" from="word/P" to="." method="_on_P_lepas"]
[connection signal="lepas" from="word/S" to="." method="_on_S_lepas"]
[connection signal="lepas" from="word/A2" to="." method="_on_A2_lepas"]
[connection signal="lepas" from="word/I" to="." method="_on_I_lepas"]
[connection signal="lepas" from="word/A" to="." method="_on_A_lepas"]
[connection signal="lepas" from="word/V" to="." method="_on_V_lepas"]
[connection signal="lepas" from="word/N" to="." method="_on_N_lepas"]
[connection signal="lepas" from="word/G" to="." method="_on_G_lepas"]
